# ChangeLog for www-client/arora
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.12 2009/04/05 20:25:17 yngwin Exp $

*arora-0.6-r1 (05 Apr 2009)

  05 Apr 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.4.ebuild,
  -arora-0.6.ebuild, +arora-0.6-r1.ebuild:
  Fix translation location in 0.6, thanks to Davide Pesavento in bug 264995.
  Remove old.

*arora-0.6 (31 Mar 2009)

  31 Mar 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.6.ebuild:
  New release. The en_US locale is no longer optional.

  25 Mar 2009; Ben de Groot <yngwin@gentoo.org> metadata.xml:
  Transfer maintainership to qt herd

*arora-0.5 (21 Feb 2009)

  21 Feb 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.3.ebuild,
  +arora-0.5.ebuild:
  Version bump. Bring linguas up to date. Remove old.

  06 Nov 2008; Ben de Groot <yngwin@gentoo.org> arora-0.4.ebuild:
  Die when make install fails, fixes bug 245454. And not allowing parallel
  make should fix the failure.

  01 Oct 2008; Ben de Groot <yngwin@gentoo.org> arora-0.4.ebuild:
  Fix to prevent pre-stripping binary (bug 239206)

*arora-0.4 (01 Oct 2008)

  01 Oct 2008; Ben de Groot <yngwin@gentoo.org>
  -arora-0.3_pre20080705.ebuild, -arora-0.3_pre20080720.ebuild,
  +arora-0.4.ebuild:
  Version bump, adding linguas support. Drop old versions.

*arora-0.3 (05 Aug 2008)

  05 Aug 2008; Ben de Groot <yngwin@gentoo.org> +arora-0.3.ebuild:
  Version bump to release 0.3

*arora-0.3_pre20080720 (20 Jul 2008)

  20 Jul 2008; Ben de Groot <yngwin@gentoo.org> -arora-0.2_p20080604.ebuild,
  -arora-0.2_p20080618.ebuild, +arora-0.3_pre20080720.ebuild:
  New snapshot, removing old versions

*arora-0.3_pre20080705 (05 Jul 2008)

  05 Jul 2008; Ben de Groot <yngwin@gentoo.org>
  +arora-0.3_pre20080705.ebuild:
  New snapshot

*arora-0.2_p20080618 (18 Jun 2008)

  18 Jun 2008; Ben de Groot <yngwin@gentoo.org> +arora-0.2_p20080618.ebuild:
  New snapshot
