@@ -1,9 +1,4 @@
-DIST arora-0.4.tar.gz 673838 RMD160 97b5d78c312577392a31437de069b1fd7c0621e3 SHA1 b3facd08256c4622fc08cafa0cb0202d9b468f18 SHA256 113bf82e6adfd7116b2990ef948f0065b24ac24b9d0a700d99eac611634bda86
-DIST arora-0.5.tar.gz 764853 RMD160 8cb129602ee74835380acf7d71cbc751df4396f5 SHA1 9809e608edcbd9eae1e2a758a6135bf0534245ae SHA256 4f13cf1aed95a0b38379d3c55c118005c5d03edf56f333bcb3ac2a762516b2ea
-DIST arora-0.6.tar.gz 819356 RMD160 573c7f0630df1ff5c7f051b9450711fda2dc0f44 SHA1 8fa7821092dcb090b2ff84437dcf6774277b44d2 SHA256 8ece9bcef89179618ab230492d09ee81a24a60d0f8ac5221e5463b435a3c3d74
-EBUILD arora-0.4.ebuild 1549 RMD160 91c0ab6312f3e1ca267fb25c5dd8b3f11220a762 SHA1 ae67ec73c4bd32bccd6f4990b4a9d5726fb781c8 SHA256 9430ee620137d324e09b6b16ee8ddb6e431267a9173437122812731ef96d2fa4
-EBUILD arora-0.5.ebuild 1612 RMD160 d95be07678e3b0a5daad7fb3ed72eddc5c471e5c SHA1 8a4280b0ea400997ad8f1410574f6ac204cd201a SHA256 a26b855f20f661abc0ca925000b1b0ea738b25703c31a5b757a55d8962c6f001
-EBUILD arora-0.6-r1.ebuild 1619 RMD160 6c03bafb71187f952d2bb20e942a24071292379b SHA1 6dfd10045e5b44147283520e29aae1f58f582a32 SHA256 d7b4308bf79482d89f6b78a92e6916f22013fc33b1c0e1807696319380597f4e
-EBUILD arora-0.6.ebuild 1606 RMD160 e578bf67c910586eeae56033cb6af04c8693406f SHA1 201f1574ce6672e65c4c9ea5760ed7c5e912a975 SHA256 172a607b66b7f093d142d0e2323c8a82eb92fe9ef78a1d0f75737b79f7993188
-MISC ChangeLog 2262 RMD160 b211fde1a0bf783fbd27677009d27d7230e66ea5 SHA1 d011cc5193d3c4e28b62ee05476e01159e76a876 SHA256 e88fc6e73086db587fb1dc3ac49827b473e35199431763e1694ce378c3415619
+DIST arora-0.6.1.tar.gz 819491 RMD160 9cbaf45d6197c9baf0cbd553be300e94d2bc0af9 SHA1 14fb934d909b71eaeca593d636cff5906eb2db61 SHA256 3de5ae3eadacc1b125943b44aeb69ab3f3d5063b43885ffba1132310a91da0be
+EBUILD arora-0.6.1.ebuild 1650 RMD160 b6de6ae35050f0db615614d7c34b51058dbf70b3 SHA1 2fe3eb399918aea2b7807e9a9fb722f03833ec56 SHA256 91ec78f8c55058a68c928beb9f87b6fc025667e8baabdd15d9c40a221f73a649
+MISC ChangeLog 2569 RMD160 455e1a0c62f1b5cf2af704ca73b54f40c8398bb5 SHA1 7448b5e2d1f8d3dbf57292fd269869548fa3db30 SHA256 648f86cc8e16418aa44701e72425ef91a584a12b686c2d9c002ec219ef30e6e2
 MISC metadata.xml 218 RMD160 8ac5a6b1750a457d848b8b154fcaf7ca2b8decb1 SHA1 961504d4ab445fc56ba6bd0e9fd0c81270cf252e SHA256 f28447fb1cee5de814788da71f81ac68b66b24ac81cac98456698c7ce9bcc011
