@@ -1,6 +1,15 @@
 # ChangeLog for www-client/arora
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.12 2009/04/05 20:25:17 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/arora/ChangeLog,v 1.14 2009/05/10 14:40:09 yngwin Exp $
+
+  10 May 2009; Ben de Groot <yngwin@gentoo.org> -arora-0.5.ebuild,
+  -arora-0.6-r1.ebuild, arora-0.6.1.ebuild:
+  Drop old versions, add qt-sql dep, fixes bug 269157
+
+*arora-0.6.1 (08 May 2009)
+
+  08 May 2009; Ben de Groot <yngwin@gentoo.org> +arora-0.6.1.ebuild:
+  Version bump (fixes a bug with Qt 4.5.1)
 
 *arora-0.6-r1 (05 Apr 2009)
 
